GPC/tests/examples/fail/errArith11.gpc

void GPRM::Test::errArith11() {
    return 3 || 3.0;
}


